<resources>
    <string name="app_name">Dictinary</string>
    <string name="start">Start</string>
    <string name="dictinary">Dictionary</string>
    <string name="option">Option</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="deutsch">Deutsch</string>
    <string name="russian">Russian</string>
    <string name="back">Back</string>
    <string name="title_activity_level1">level1</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="ok">OK</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>

    <string name="btn_set">set</string>
    <string name="btn_sort">sort</string>
    <string name="btn_delall">del all</string>

    <string name="trueresult">LVL COMPLETE</string>
    <string name="failedresult">LVL FAILED</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>